# RoboSub2020

./: README.md
Assignment_1/: GateDetection_ImageProcessing.ipynb
robosub2020_assignment2/: CMakeLists.txt  package.xml
robosub2020_assignment2/launch/: robosub2020_assignment2_launch.py
robosub2020_assignment2/scripts/: gate_detector.py  video_streamer.py
robosub2020_assignment2/src/: motion_planner.cpp
